--- a/app/less/mobile/modules/navbar.less
+++ b/app/less/mobile/modules/navbar.less
@@ -16,6 +16,7 @@ nav.navbar {
 
     li a {
         .h2;
+        font-size: 2.2em;
         margin: 0;
         padding: 10px 20px;
     }
