--- a/app/less/tablet/modules/navbar.less
+++ b/app/less/tablet/modules/navbar.less
@@ -17,7 +17,7 @@ nav.navbar {
     li a {
         .h2;
         margin: 0;
-        padding: 10px 40px;
+        padding: 6px 40px;
     }
 
     .nav-open & {
